# master-thesis

./: .gitignore  PredictionProcessor.py  README.md  claus_backbone_test.ipynb  claus_backcone_test.py  knudsen_test.ipynb  main.py  myDocument.ipynb  pytorch_segnet.ipynb  rwsettings.xml
RobWork/: assimp_log.txt  main.py  main2.py  rwsettings.xml
RobWork/Project_WorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml  temp.ppm
RobWork/Project_WorkCell/UR5/: assimp_log.txt
RobWork/Project_WorkCell/container/: container.stl
RobWork/Project_WorkCell/objects/creeper/: creeper.xml
RobWork/Project_WorkCell/objects/kodimagnyl/: kodimagnyl.xml  kodimagnyl_kodimagnyl v1_dot over i.stl  kodimagnyl_kodimagnyl v1_green fade.stl  kodimagnyl_kodimagnyl v1_green.stl  (+44 more)
RobWork/Project_WorkCell/test_scenes/: 2_321_cluttered.xml  2_321_scattered.xml  2_421_cluttered.xml  2_421_scattered.xml  2_431_cluttered.xml  2_431_scattered.xml  2_432_cluttered.xml  2_432_scattered.xml  2_521_cluttered.xml  2_521_scattered.xml  2_531_cluttered.xml  2_531_scattered.xml  2_532_cluttered.xml  2_532_scattered.xml  2_541_cluttered.xml  2_541_scattered.xml  2_542_cluttered.xml  2_542_scattered.xml  2_543_cluttered.xml  2_543_scattered.xml  2_object_cluttered.xml  2_object_scattered.xml  3_21_cluttered.xml  3_21_scattered.xml  3_31_cluttered.xml  3_31_scattered.xml  3_32_cluttered.xml  3_32_scattered.xml  3_41_cluttered.xml  3_41_scattered.xml  3_42_cluttered.xml  3_42_scattered.xml  3_43_cluttered.xml  3_43_scattered.xml  3_51_cluttered.xml  3_51_scattered.xml  3_52_cluttered.xml  3_52_scattered.xml  3_53_cluttered.xml  3_53_scattered.xml  (+26 more)
RobWork/UR5WorkCellFinal/UR-6-85-5-A/: Device.wc.xml
RobWork/cpp/: CMakeLists.txt  LoadModel.py  run_test.sh
RobWork/cpp/inc/: Inference.hpp  InverseKinematics.hpp  MotionPlanning.hpp  PredictionProcessor.hpp  Sensor.hpp  inference.h  inference.hpp  matplotlibcpp.h
RobWork/cpp/inference_bin_generator/: CMakeLists.txt  compile.sh  inferenceBinGenerator.cpp
RobWork/cpp/src/: Inference.cpp  InverseKinematics.cpp  MotionPlanning.cpp  PredictionProcessor.cpp  Sensor.cpp  inference.cpp  inference.cpp.dep  inference_py.dep  main.cpp
RobWork/python/: Sensor.py  main.py
RobWork/test/: CMakeLists.txt  main.cpp
annotation/: annotating_script.py
blender/: generate_image.sh  imshow.py  knud_test.py  main.py  normal_render.py  pixel_value_calculations  rm_image.sh  synthetic_data_generator.blend  synthetic_data_generator.blend1  test.blend  untitled.blend  untitled.blend1
blender/blender_script/: blender_render_script.py  blender_render_script_test.py  blender_test_script.py  gt_face_change_script.py  gt_face_change_script_test.py  ray_cast_test.py  remove_collection.py  run.py  test_for_one_box.py
blender/stl_files/: box.stl  container.stl
blender/textures/: dimensions.odt
docker-stuff/: Dockerfile  README.md  copy_data.py  data_processing.m  requirements.txt  train.py  train_grid_search.py
docker-stuff/results/: results0.csv  results1.csv  results13_w_batchnorm.csv  results13_w_batchnorm_l2.csv  results22_extended_baseline.csv  results_10_adamax.csv  results_10_all_reg.csv  results_10_batchnorm.csv  results_10_batchnorm_scse.csv  results_10_bn_adamax_synthetic_data_4000.csv  results_10_bn_l2_e-3_synthetic_data_4000.csv  results_10_extended_baseline.csv  results_10_full_test.csv  results_10_l2_e-3.csv  results_10_l2_e-3_adamax_synthetic_data_4000.csv  results_10_l2_e-3_scse_synthetic_data_4000.csv  results_10_l2_e-3_synthetic_data_4000.csv  results_10_l2_e-4.csv  results_10_l2_e-5.csv  results_10_l2_e-5_scse.csv  results_10_l2_e-5_scse_adamax.csv  results_10_l2_e-5_scse_synthetic_data_4000.csv  results_10_scse.csv  results_10_synthetic_1000.csv  results_10_synthetic_2000.csv  results_10_synthetic_3000.csv  results_10_synthetic_4000.csv  results_22_batchnorm.csv  results_22_batchnorm_scse.csv  results_22_extended_baseline.csv  results_22_scse.csv  results_test_run.csv
docker-stuff/results_grid_search/: grid_search_results.csv  results0.csv  results1.csv  results10.csv  results11.csv  results12.csv  results13.csv  results14.csv  results15.csv  results16.csv  results17.csv  results18.csv  results19.csv  results2.csv  results20.csv  results21.csv  results22.csv  results23.csv  results24.csv  results25.csv  results26.csv  results3.csv  results4.csv  results5.csv  results6.csv  results7.csv  results8.csv  results9.csv
docker-tests/: Dockerfile  requirements.txt  train.py
inference_cpp/: CMakeLists.txt  main.cpp
inference_cpp/inc/: inference.h  test.h
inference_cpp/py_scripts/: LoadModel.py  PredictionProcessor.py  debug.py  inference.py
inference_cpp/src/: inference.cpp  test.cpp
jit_models/: convert_2_jit.py
physical-implementation/: CMakeLists.txt  README.md
physical-implementation/Project_WorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml
physical-implementation/Project_WorkCell/camera/: camera.xml
physical-implementation/Project_WorkCell/container/: container.mtl
physical-implementation/Project_WorkCell/penGripper/: Pen_holder.stl  penGripper.xml
physical-implementation/Project_WorkCell/pengripper/: penGripper.stl  penadapter.stl  pengripper.xml  ur5adapter.stl
physical-implementation/config/: calibration.json  camera_config.json  extrinsics.json
physical-implementation/inc/: CameraCalibration.hpp  InverseKinematics.hpp  PredictionProcessor.hpp  Sensor.hpp
physical-implementation/src/: CameraCalibration.cpp  MotionPlanning.cpp  PredictionProcessor.cpp  Sensor.cpp  calibration.cpp  main.cpp
processing/src/: main.cpp
test-folder/: PredictionProcessor.py  network_train.ipynb  test.py
test-folder/annotation/: annotating_script.py
test-folder/inference_cpp/: CMakeLists.txt
test-folder/inference_cpp/py_scripts/: PredictionProcessor.py  inference_test.py
test-folder/inference_cpp/src/: inference.cpp
test-folder/processing/: CMakeLists.txt
test-folder/processing/inc/: PredictionProcessor.hpp
test-folder/processing/src/: PredictionProcessor.cpp
test-folder/pytorch-tests/: pytorch_lenet.ipynb  pytorch_segnet.ipynb
(+137 files in other folders)
